[황다영]게시글 프로필 내려받기

--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -21,7 +21,7 @@
           <div class="userInfo">
             <!-- 유저 닉네임 받아오기 -->
              <!-- <%= post.author.profile.nickname %> -->
-            <a href="" class="nickName">다영다영</a>
+            <a href="" class="nickName"><%= post.author.profile.nickname %></a>
             <!-- 팔로우 버튼 -->
             <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button>
             <!-- 유저 아이디 -->
