--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -24,8 +24,7 @@
               <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg">
               <div class="userInfo">
                 <!-- 유저 닉네임 받아오기 -->
-                <!-- <%= post.author.profile.nickname %> 회원가입 시 프로필 닉네임 같이 넣어줘도 못불러옴 --> 
-                <a href="http://localhost:4000/users/<%= post.author.id %>" class="nickName">다영다영</a>
+                <a href="http://localhost:4000/users/<%= post.author.id %>" class="nickName"><%= post.author.profile.nickname %></a>
                 <!-- 팔로우 버튼 -->
                 <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button>
                 <!-- 유저 아이디 -->
