--- a/src/views/_layouts/header-menu.ejs
+++ b/src/views/_layouts/header-menu.ejs
@@ -3,7 +3,7 @@
     <button type="button" class="menuButton">
    </button>
      <!-- 로고 -->
-    <a href="#">
+    <a href="http://localhost:4000/posts/">
       <img src="/static/images/nanum-logo.png" alt="나눔숲" />
     </a>
     <button type="button" class="searchButton">
