--- a/src/views/_layouts/header-w.ejs
+++ b/src/views/_layouts/header-w.ejs
@@ -4,7 +4,7 @@
 
    </button>
      <!-- 로고 -->
-    <a href="#">
+    <a href="http://localhost:4000/posts/">
       <img src="/static/images/nanum-logo-w.png" alt="나눔숲" />
     </a>
     <button type="button" class="searchButtonWhite">
