프로필 수정에서 수정완료/뒤로가기시 프로필 화면으로 돌아가기

--- a/src/views/client/users/userEdit.ejs
+++ b/src/views/client/users/userEdit.ejs
@@ -13,8 +13,19 @@
   </head>
   <body>
     <div id="wrap">
-      <header>
-        <div class="header-inner"><%- include('../../_layouts/header') %></div>
+      <header id="header">
+        <!-- 뒤로가기 -->
+        <button
+          type="button"
+          class="backButton"
+          onclick="location.href='/users/:userId'"
+        ></button>
+        <!-- 로고 -->
+        <a href="#">
+          <img src="/static/images/nanum-logo.png" alt="나눔숲" />
+        </a>
+        <button type="button" class="searchButton"></button>
+        <!-- search -->
       </header>
       <main class="main">
         <div class="profile-edit">
