--- a/public/styles/init.css
+++ b/public/styles/init.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
 
+
 :root {
     /* body */
     --body-bg: #f4f4f4;
@@ -33,6 +34,7 @@ body {
 
 /* 헤더 */
 #header {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -79,6 +81,8 @@ body {
     width: 100%;
     max-width: 110px;
 }
+
+
 
 /* 레이아웃 */
 
@@ -175,4 +179,5 @@ a {
 button {
     cursor: pointer;
 }
+
 
