--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -114,55 +114,57 @@
             <!-- 댓글 작성 영역 끝 -->
 
             <!-- 댓글 리스트 시작 -->
-            <div class="commentSingle">
-              <!-- 유저 프로필 이미지 -->
-              <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg" />
-              <div class="commentUser">
-                <!-- 유저 닉네임 받아오기 -->
-                <!-- <%= post.author.profile.nickname %> -->
-                <a href="" class="nickName">다영다영</a>
-                <!-- 유저 아이디 -->
-                <a href="" class="userId">&#64;<%= post.author.accountId %></a>
-
-                <!-- 글 작성시간 -->
-                <em class="createdAt" data-created-at="<%= post.createdAt.toISOString() %>"></em>
-                <!-- 댓글 가져오기 -->
-                <p class="comment">우와아아아아아ㅇㅇㅇㅇㅇㅇㅇㅇㅇ</p>
+             <% post.comments.forEach((comment) => { %>
+              <div class="commentSingle">
+                <!-- 유저 프로필 이미지 -->
+                <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg" />
+                <div class="commentUser">
+                  <!-- 유저 닉네임 받아오기 -->
+                  <a href="" class="nickName"><%= comment.author.profile.nickname %></a>
+                  <!-- 유저 아이디 -->
+                  <a href="" class="userId">&#64;<%= comment.author.accountId %></a>
+  
+                  <!-- 글 작성시간 -->
+                  <em class="createdAt" data-created-at="<%= comment.createdAt.toISOString() %>"></em>
+                  <!-- 댓글 가져오기 -->
+                  <p class="comment"><%= comment.content %></p>
+                </div>
+                <!-- 좋아요 -->
+                <div class="like">
+                  <i class="fa-regular fa-heart"></i>
+                  12
+                </div>
+                <!-- 답글, 수정, 삭제, 공유 버튼 -->
+                <div class="commentEditBtns">
+                  <button type="button"><i class="fa-solid fa-reply"></i> 답글달기</button>
+                  <button type="button"><i class="fa-solid fa-pen"></i> 수정</button>
+                  <button type="button"><i class="fa-regular fa-trash-can"></i> 삭제</button>
+                </div>
               </div>
-              <!-- 좋아요 -->
-              <div class="like">
-                <i class="fa-regular fa-heart"></i>
-                12
-              </div>
-              <!-- 답글, 수정, 삭제, 공유 버튼 -->
-              <div class="commentEditBtns">
-                <button type="button"><i class="fa-solid fa-reply"></i> 답글달기</button>
-                <button type="button"><i class="fa-solid fa-pen"></i> 수정</button>
-                <button type="button"><i class="fa-regular fa-trash-can"></i> 삭제</button>
+              <!-- 댓글 리스트 끝 -->
+  
+              <!-- 대댓글 작성 영역 시작 -->
+              <div class="commentWriteWrap">
+                <!-- 유저 프로필 이미지 -->
+                <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg" />
+                <!-- 댓글 입력 창 -->
+                <div class="commentWrite" contenteditable="true" placeholder="답글을 입력해 주세요."></div>
+                <!-- 파일 업로드 버튼 -->
+                <div class="upload">
+                  <label for="file">
+                    <img src="/static/images/upload-btn-gray.svg" class="formImg" alt="파일업로드버튼" />
+                  </label>
+                  <input type="file" id="file" />
+                </div>
+                <!-- 등록 버튼 -->
+                <button type="submit">등록</button>
               </div>
             </div>
-            <!-- 댓글 리스트 끝 -->
-
-            <!-- 대댓글 작성 영역 시작 -->
-            <div class="commentWriteWrap">
-              <!-- 유저 프로필 이미지 -->
-              <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg" />
-              <!-- 댓글 입력 창 -->
-              <div class="commentWrite" contenteditable="true" placeholder="답글을 입력해 주세요."></div>
-              <!-- 파일 업로드 버튼 -->
-              <div class="upload">
-                <label for="file">
-                  <img src="/static/images/upload-btn-gray.svg" class="formImg" alt="파일업로드버튼" />
-                </label>
-                <input type="file" id="file" />
-              </div>
-              <!-- 등록 버튼 -->
-              <button type="submit">등록</button>
-            </div>
-          </div>
-          <!--  대댓글 작성 영역 끝 -->
-        </section>
-
+            <!--  대댓글 작성 영역 끝 -->
+          </section>
+  
+             <% }); %>
+            
         <% }); %>
         <!-- 반복 끝 -->
       </div>
