[황다영] 답글달기 toggle 스크립트 추가

--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -180,7 +180,7 @@ a {
 }
 
 .commentWriteWrap {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
   padding: 5px 0 20px 0;
