--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -31,18 +31,19 @@
               <!-- 카테고리 받아오기 -->
             <span class="category"><%= post.category.title %></span>
             <!-- 더 보기 버튼 -->
-            <div class="viewMore" onclick="toggleEditDelete()">
+            <div class="viewMore" onclick="toggleEditDelete('<%= post.postId %>', event)">
               <i class="fa-solid fa-ellipsis-vertical"></i>
-              <div class="postEditDelete flex-column-center">
-                <!-- <% if (isMe) { %> -->
+              <div class="postEditDelete flex-column-center" id="<%= post.postId %>">
+              
                 <a href="/posts/<%= post.postId %>/edit">
                   <i class="fa-solid fa-pen"></i> 수정
                 </a>
-                <a id="deleteButton">
+                <a id="deleteButton" onclick="deletePost('<%= post.postId %>')">
                   <i class="fa-solid fa-trash"></i> 삭제
                 </a>
-                <!-- <% } %> -->
+  
               </div>
+
             </div>
 
            
@@ -110,7 +111,7 @@
             <div class="commentUser">
               <!-- 유저 닉네임 받아오기 -->
               <!-- <%= post.author.profile.nickname %> -->
-              <a href="" class="nickName">다영다영</a>
+              <a href="" class="nickName"><%= post.author.profile.nickname %></a>
               <!-- 유저 아이디 -->
               <a href="" class="userId">&#64;<%= post.author.accountId %></a>
               
@@ -126,7 +127,10 @@
             </div>
             <!-- 답글, 수정, 삭제, 공유 버튼 -->
             <div class="commentEditBtns">
-              <button type="button"><i class="fa-solid fa-reply"></i> 답글달기</button>
+              <!--  답글달기 버튼 -->
+              <button type="button" onclick="toggleReplyArea(this)">
+                <i class="fa-solid fa-reply"></i> 답글달기
+              </button>
               <button type="button"><i class="fa-solid fa-pen"></i> 수정</button>
               <button type="button"><i class="fa-regular fa-trash-can"></i> 삭제</button>
             </div>
@@ -199,6 +203,7 @@
       }
     });
   </script>
+  
   <!-- 작성시간 한글 변환 -->
   <script>
     const $createdAt = document.querySelectorAll(".createdAt");
@@ -231,15 +236,40 @@
       })
     });
 
+
     // 수정, 삭제 더 보기 버튼 보이기
-    function toggleEditDelete() {
-            const editDeleteArea = document.querySelector('.postEditDelete');
-            if (editDeleteArea.style.display === 'none' || editDeleteArea.style.display === '') {
-                editDeleteArea.style.display = 'flex'; 
-            } else {
-                editDeleteArea.style.display = 'none'; 
-            }
-        };
+    function toggleEditDelete(postId, event) {
+          // 수정, 삭제 버튼 숨기기 (전체)
+          const allEditDeleteBtns = document.querySelectorAll(".postEditDelete");
+          allEditDeleteBtns.forEach(btn => {
+            btn.style.display = "none";
+          });
+
+          // 클릭한 게시글의 수정/삭제 버튼 선택
+          const editDeleteBtn = document.getElementById(`${postId}`);
+
+          // 현재 상태에 따라 표시 또는 숨김
+          if (editDeleteBtn.style.display === "none" || editDeleteBtn.style.display === "") {
+            editDeleteBtn.style.display = "flex";
+          } else {
+            editDeleteBtn.style.display = "none";
+          }
+
+          // 이벤트 버블링 방지
+          event.stopPropagation();
+        }
+
+
+        // 답글달기 버튼 클릭 시 작성영역 보이기
+        function toggleReplyArea(button) {
+          const replyArea = button.closest('.commentSingle').nextElementSibling;
+
+          if (replyArea.style.display === "none" || replyArea.style.display === "") {
+            replyArea.style.display = "flex";
+          } else {
+            replyArea.style.display = "none";
+          }
+        }
 
   </script>
 </body>
