--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -171,8 +171,10 @@
     <!-- wrap 끝 -->
 
 
-  <!-- 작성시간 한글 변환 -->
+
   <script>
+    
+    // 작성시간 한글 변환
     const $createdAt = document.querySelectorAll(".createdAt");
     
 
@@ -228,25 +230,25 @@
 
 
     // 무한 스크롤
-    // let page = 1;
-    // let loading = false;
-    // const $postList = document.getElementById('postList');
+    let page = 1;
+    let loading = false;
+    const $postList = document.getElementById('postList');
 
-    // window.addEventListener('scroll', async () => {
-    //   if (window.innterHeight + window.scrollY >= document.body.offsetHeight && !loading) {
-    //     loading = true;
-    //     const response = await fetch (`/posts?page=${page + 1}`);
-    //     if (response.ok) {
-    //       const newPosts = await response.text();
-    //       $postList.insertAdjacentHTML('beforeend', newPosts);
-    //       page++;
-    //       loading = false;
-    //     } else {
-    //       console.error('게시글 로드에 실패했습니다.');
-    //       loading = false;
-    //     }
-    //   }
-    // })
+    window.addEventListener('scroll', async () => {
+      if (window.innterHeight + window.scrollY >= document.body.offsetHeight && !loading) {
+        loading = true;
+        const response = await fetch (`/posts?page=${page + 1}`);
+        if (response.ok) {
+          const newPosts = await response.text();
+          $postList.insertAdjacentHTML('beforeend', newPosts);
+          page++;
+          loading = false;
+        } else {
+          console.error('게시글 로드에 실패했습니다.');
+          loading = false;
+        }
+      }
+    })
    
   </script>
 </body>
