--- a/src/views/client/category/userCategoryList.ejs
+++ b/src/views/client/category/userCategoryList.ejs
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<!-- header-ejs로 옮김-->
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -94,4 +97,4 @@
             }
         </script>
     </body>
-</html>
+</html> -->
