--- a/public/styles/pages/category/categoryList.css
+++ b/public/styles/pages/category/categoryList.css
@@ -1,4 +1,22 @@
-/* 메뉴 팝업 */
+/* 카테고리 팝업 */
+
+.category-popup.hidden {
+    display: none;
+}
+
+.category-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    z-index: 1000;
+}
+
 .category-menu-bar {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 15px;
