--- a/public/styles/pages/category/userCategoryList.css
+++ b/public/styles/pages/category/userCategoryList.css
@@ -1,4 +1,27 @@
 /* 메뉴 팝업 */
+
+body.popup-active {
+    overflow: hidden !important;
+    filter: blur(5px) !important;
+}
+
+.category-popup.hidden {
+    display: none;
+}
+
+.category-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .category-menu-bar {
     /* display: block; */
     background-color: rgba(255, 255, 255, 0.8);
