--- a/src/views/_layouts/header.ejs
+++ b/src/views/_layouts/header.ejs
@@ -1,14 +1,101 @@
-<header id="header">
-  <!-- 뒤로가기 -->
+<!-- <header id="header">
+  뒤로가기
    <button type="button" class="backButton">
 
    </button>
-     <!-- 로고 -->
+     로고
     <a href="#">
       <img src="/static/images/nanum-logo.png" alt="나눔숲" />
     </a>
     <button type="button" class="searchButton">
 
     </button>
-   <!-- search -->
-</header>
+   search
+</header> -->
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        />
+        <link rel="stylesheet" href="/static/styles/pages/searchPopup.css" />
+
+        <title>검색</title>
+    </head>
+    <body>
+        <header id="header">
+            <!-- 뒤로가기 -->
+            <button type="button" class="backButtonWhite"></button>
+            <!-- 로고 -->
+            <a href="#">
+              <img src="/static/images/nanum-logo.png" alt="나눔숲" />
+            </a>
+            <button
+                type="button"
+                class="searchButtonWhite"
+                onclick="openSearchPopup()"
+            ></button>
+            <!-- search -->
+        </header>
+        <div class="search-wrapper">
+          <div class="search-popup hidden">
+                  <a href="javascript:void(0);" class="search-wrapper-close" onclick="closeSearchPopup()">
+                      <i class="fa-solid fa-x"></i>
+                  </a>
+                  <div class="search-input-header">
+                      <input
+                          type="text"
+                          class="search-input"
+                          placeholder="검색어를 입력해주세요."
+                      />
+                      <a href="">
+                          <i class="fa-solid fa-magnifying-glass"></i>
+                      </a>
+                  </div>
+                  <div class="search-input-main">
+                      <div class="search-history">
+                          검색기록
+                          <a href="" class="search-history-list">운동</a>
+                          <a href="" class="search-history-list">@ggaong</a>
+                          <a href="" class="search-history-list">peppone-choi</a>
+                      </div>
+                      <div class="autocomplete-suggestions">
+                          추천검색
+                          <div class="search-suggestion-container">
+                              <a href="" class="search-suggestion-list"
+                                  >#unityhub</a
+                              >
+                              <a href="" class="search-suggestion-list"
+                                  >#unityhub</a
+                              >
+                              <a href="" class="search-suggestion-list"
+                                  >#unityhub</a
+                              >
+                              <a href="" class="search-suggestion-list"
+                                  >#unityhub</a
+                              >
+                              <a href="" class="search-suggestion-list"
+                                  >#unityhub</a
+                              >
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <script>
+        function openSearchPopup() {
+            const popup = document.querySelector(".search-popup");
+            popup.classList.remove("hidden");
+        }
+        function closeSearchPopup() {
+            const popup = document.querySelector(".search-popup");
+            popup.classList.add("hidden");
+        }
+    </script>
+    </body>
+</html>
