--- a/src/views/searchPopup.ejs
+++ b/src/views/searchPopup.ejs
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!-- header.ejs로 이동-->
+
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -47,4 +49,4 @@
             </div>
         </section>
     </body>
-</html>
+</html> -->
