--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -103,6 +103,94 @@
       </div>
     </div>
 
+    <!-- 중복확인 팝업 -->
+    <script>
+      const nicknameDoubleCheckButton = document.querySelector(".nickname-double-check");
+      const idDoubleCheckButton = document.querySelector(".id-double-check");
+      const emailDoubleCheckButton = document.querySelector(".email-double-check");
+      const availableConfirmButton = document.querySelector(".available-confirm");
+      const unavailableConfirmButton = document.querySelector(".unavailable-confirm");
+      const availablePopup = document.querySelector(".availability-popup-available");
+      const unavailablePopup = document.querySelector(".availability-popup-unavailable");
+
+      nicknameDoubleCheckButton.addEventListener("click", async function (e) {
+        e.preventDefault();
+        const nickname = document.querySelector("#nickname").value;
+        if (!nickname) {
+          alert("닉네임을 입력해주세요.");
+          return;
+        }
+        const data = await fetch(`/api/users/exists/nickname/${nickname}`);
+        const result = await data.json();
+        if (result === true) {
+          unavailablePopup.classList.remove("hidden");
+          const unavailableConfirmButton = document.querySelector(".unavailable-confirm");
+          unavailableConfirmButton.addEventListener("click", function (e) {
+            unavailablePopup.classList.add("hidden");
+          });
+          return;
+        } else {
+          availablePopup.classList.remove("hidden");
+          const availableConfirmButton = document.querySelector(".available-confirm");
+          availableConfirmButton.addEventListener("click", function (e) {
+            availablePopup.classList.add("hidden");
+          });
+          return;
+        }
+      });
+      idDoubleCheckButton.addEventListener("click", async function (e) {
+        e.preventDefault();
+        const username = document.querySelector("#username").value;
+        if (!username) {
+          alert("아이디를 입력해주세요.");
+          return;
+        }
+        const data = await fetch(`/api/users/exists/accountId/${username}`);
+        const result = await data.json();
+        if (result === true) {
+          unavailablePopup.classList.remove("hidden");
+          const unavailableConfirmButton = document.querySelector(".unavailable-confirm");
+          unavailableConfirmButton.addEventListener("click", function (e) {
+            unavailablePopup.classList.add("hidden");
+          });
+          return;
+        } else {
+          availablePopup.classList.remove("hidden");
+          const availableConfirmButton = document.querySelector(".available-confirm");
+          availableConfirmButton.addEventListener("click", function (e) {
+            availablePopup.classList.add("hidden");
+          });
+          return;
+        }
+      });
+
+      emailDoubleCheckButton.addEventListener("click", async function (e) {
+        e.preventDefault();
+        const email = document.querySelector("#email").value;
+        if (!email) {
+          alert("이메일을 입력해주세요.");
+          return;
+        }
+        const data = await fetch(`/api/users/exists/email/${email}`);
+        const result = await data.json();
+        if (result === true) {
+          unavailablePopup.classList.remove("hidden");
+          const unavailableConfirmButton = document.querySelector(".unavailable-confirm");
+          unavailableConfirmButton.addEventListener("click", function (e) {
+            unavailablePopup.classList.add("hidden");
+          });
+          return;
+        } else {
+          availablePopup.classList.remove("hidden");
+          const availableConfirmButton = document.querySelector(".available-confirm");
+          availableConfirmButton.addEventListener("click", function (e) {
+            availablePopup.classList.add("hidden");
+          });
+          return;
+        }
+      });
+    </script>
+
     <!-- 파일 선택 -->
     <script>
       const profileImage = document.querySelector(".profile-image");
@@ -132,6 +220,7 @@
         const confirmPassword = document.querySelector("#confirm-password").value;
         const introduce = document.querySelector("#introduce").value;
         const profileImage = document.querySelector("#profile-image-input").files[0];
+        console.log(profileImage);
         const formData = new FormData();
         formData.append("profileImage", profileImage);
         const image = await fetch("/api/upload/image", {
