--- a/public/styles/pages/signUp.css
+++ b/public/styles/pages/signUp.css
@@ -53,12 +53,17 @@ body {
     height: 13px;
 }
 
+.image-information {
+    color: var(--mono-000);
+    padding-top: 10px;
+}
+
 .signup-input-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
+    padding: 30px 0;
 }
 
 .signup-input-form input {
@@ -129,7 +134,7 @@ body {
 }
 
 .introduce::placeholder {
-    padding-left: 10px;
+    padding: 5px 0 0 10px;
     font-size: 14px;
 }
 .introduce::-webkit-scrollbar {
@@ -229,4 +234,48 @@ body {
     font-weight: bold;
     background-color: transparent;
     color: var(--mono-000);
+}
+
+.edit-popup {
+    position: absolute;
+    top: 90%;
+    left: 180%;
+    transform: translate(-50%, -50%);
+    width: 130px;
+    padding: 5px;
+    background-color: white;
+    border-radius: 10px;
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.edit-popup.hidden {
+    display: none;
+}
+
+.edit-popup-content {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+}
+
+.upload-image-btn,
+.delete-image-btn,
+.cancel-image-upload-btn {
+    border: none;
+    border-radius: 10px;
+    padding: 5px 0;
+    margin: 2px 0;
+}
+
+.upload-image-btn {
+    background-color: var(--sub-color-5);
+}
+
+.delete-image-btn {
+    background-color: var(--sub-color-4);
+}
+
+.cancel-image-upload-btn {
+    background-color: var(--sub-color-1);
 }
