--- a/public/styles/pages/category/userCategoryList.css
+++ b/public/styles/pages/category/userCategoryList.css
@@ -55,9 +55,10 @@ body.popup-active {
     right: 0px;
     top: 5px;
     color: black;
-    font-size: 16px;
     padding: 15px;
     border-radius: 50%;
+    font-size: 16px;
+
 }
 
 .category-profile {
@@ -228,3 +229,49 @@ body.popup-active {
     cursor: pointer;
     font-weight: bold;
 }
+
+
+
+
+/* css 부분수정 */
+
+.category-menu-bar {
+    overflow-y: hidden;
+}
+
+.category-menu-bar-main {
+    height: calc(100% - 150px);
+}
+
+.logout-popup {
+    z-index: 1000;
+    padding: 15px;
+}
+
+.logout-btn {
+    gap: 5px;
+}
+
+.logout-btn button {
+    width: 100%;
+    color: var(--mono-000);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    transition: .3s;
+}
+
+.logout-btn button:first-child:hover {
+    background-color: #f87c7c;
+}
+.logout-btn button:last-child:hover {
+    background-color: #75aeee;
+}
+
+@media all and (max-width:479px) {
+    .category-menu-bar {
+        width: 50%;
+    }
+
+    .category-menu-bar-main {
+        height: calc(100% - 170px);
+    }
+  }
