[황다영] develop업데이트

--- a/public/styles/pages/searchPopup.css
+++ b/public/styles/pages/searchPopup.css
@@ -98,3 +98,12 @@
     font-weight: 400;
     color: var(--mono-300);
 }
+
+
+
+
+@media all and (max-width:479px) {
+    .search-popup {
+        width: 65%;
+    }
+  }
