--- a/src/views/_layouts/header-menu-w.ejs
+++ b/src/views/_layouts/header-menu-w.ejs
@@ -8,10 +8,6 @@
         onclick="location.href='/category'"
     ></button>
     로고
-<<<<<<< HEAD
-
-=======
->>>>>>> develop
     <a href="#">
         <img src="/static/images/nanum-logo-w.png" alt="나눔숲" />
     </a>
@@ -45,7 +41,7 @@
                 onclick="openCategoryMenu()"
             ></button>
             <!-- 로고 -->
-            <a href="#">
+            <a href="http://localhost:4000/posts">
                 <img src="/static/images/nanum-logo-w.png" alt="나눔숲" />
             </a>
             <button
