--- a/src/views/_layouts/header.ejs
+++ b/src/views/_layouts/header.ejs
@@ -33,7 +33,7 @@
             <!-- 뒤로가기 -->
             <button type="button" class="backButtonWhite"></button>
             <!-- 로고 -->
-            <a href="#">
+            <a href="http://localhost:4000/posts">
               <img src="/static/images/nanum-logo.png" alt="나눔숲" />
             </a>
             <button
