--- a/src/views/_layouts/header-w.ejs
+++ b/src/views/_layouts/header-w.ejs
@@ -25,10 +25,10 @@
     <body>
         <header id="header">
             <!-- 뒤로가기 -->
-            <button type="button" class="backButtonWhite"></button>
+            <button type="button" class="backButtonWhite" onclick="history.back();"></button>
             <!-- 로고 -->
             <a href="#">
-                <img src="/static/images/nanum-logo-w.png" alt="나눔숲" />
+                <img src="/static/images/nanum-logo-w.png" alt="나눔숲"/>
             </a>
             <button
                 type="button"
