--- a/src/views/_layouts/header-menu.ejs
+++ b/src/views/_layouts/header-menu.ejs
@@ -37,12 +37,14 @@
         <section class="category-popup hidden">
             <div class="category-menu-bar" id="categoryMenu">
                 <div class="category-menu-bar-header">
+                    <div class="category-menu-bar-icon">
                     <a href="javascript:void(0)" onclick="closeCategoryMenu()"
                         ><i class="fa-solid fa-x"></i
                     ></a>
                     <a href="/users/:userId/edit">
                         <i class="fa-solid fa-gear"></i>
                     </a>
+                </div>
                     <div class="category-profile">
                         <img
                             src="/static/images/profile.webp"
@@ -68,7 +70,7 @@
                         <% }) %>
                     </div>
                     <div class="logout">
-                        <a href="/view/login" id="logout-btn">
+                        <a href="/view/login" id="logout-btn" class="logout-btn">
                             <p>로그아웃</p>
                             <i class="fa-solid fa-right-from-bracket"></i>
                         </a>
