--- a/src/views/_layouts/header.ejs
+++ b/src/views/_layouts/header.ejs
@@ -31,7 +31,7 @@
     <body>
         <header id="header">
             <!-- 뒤로가기 -->
-            <button type="button" class="backButtonWhite"></button>
+            <button type="button" class="backButtonWhite" onclick="history.back();"></button>
             <!-- 로고 -->
             <a href="#">
               <img src="/static/images/nanum-logo.png" alt="나눔숲" />
