[권민기] 남아있는 view/views 다 지우기

--- a/src/views/_layouts/header-menu-w.ejs
+++ b/src/views/_layouts/header-menu-w.ejs
@@ -85,7 +85,7 @@
                         <% }) %>
                     </div>
                     <div class="logout">
-                        <a href="/view/login" id="logout-btn">
+                        <a href="/login" id="logout-btn">
                             <p>로그아웃</p>
                             <i class="fa-solid fa-right-from-bracket"></i>
                         </a>
@@ -194,7 +194,7 @@
                 });
 
                 confirmBtn.addEventListener("click", function () {
-                    window.location.href = "/views/login";
+                    window.location.href = "/login";
                 });
             });
         </script>
