--- a/src/views/_layouts/header-menu.ejs
+++ b/src/views/_layouts/header-menu.ejs
@@ -70,7 +70,7 @@
                         <% }) %>
                     </div>
                     <div class="logout">
-                        <a href="/view/login" id="logout-btn" class="logout-btn">
+                        <a href="/login" id="logout-btn" class="logout-btn">
                             <p>로그아웃</p>
                             <i class="fa-solid fa-right-from-bracket"></i>
                         </a>
